# pyodide-pack

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  compress_wheel.py  main.js  package.json  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
docs/: ast-rewrite.md  cli.md  conf.py  configuration.md  index.rst  module-elimination-at-runtime.md  requirements-doc.txt
examples/: test_examples.py
examples/example1/: app.py
examples/micropip_deps/: app.py  pyproject.toml
examples/netcdf4/: app.py  pyproject.toml
examples/pandas/: app.py  pyproject.toml
examples/pandas-ex/: app.py
examples/scikit-learn/: app.py  pyproject.toml
examples/stdlib_only/: app.py  pyproject.toml
examples/sympy/: app.py  pyproject.toml
pyodide_bundler/: __init__.py
pyodide_pack/: __init__.py  _py_compile.py  _utils.py  archive.py  ast_rewrite.py  cli.py  config.py  dynamic_lib.py  pack.py  runtime_detection.py  testing.py
pyodide_pack/cli/: py_compile.py
pyodide_pack/js/: discovery.js  main.js  validate.js
pyodide_pack/loader/: pyodide_pack_loader.py
pyodide_pack/runners/: node.py
pyodide_pack/tests/: conftest.py  test_archive.py  test_ast_rewrite.py  test_cli.py  test_config.py  test_py_compile.py  test_runtime_detection.py  test_testing.py
