[build-system]
requires = ["setuptools>=61.2", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyodide-pack"
authors = [{name = "Roman Yurchak"}]
description = "A bundler for Python packages for the web"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "pyodide-cli>=0.2.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/rth/pyodide-bundler"
"Bug Tracker" = "https://github.com/rth/pyodide-bundler"

[project.entry-points]
"pyodide.cli" = {pack = "pyodide_pack.cli:main"}

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
namespaces = false


[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
norecursedirs = [
   "node_modules",
   "examples"
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "ELLIPSIS",
]
addopts = [
   "--doctest-modules",
]
testpaths = [
   "pyodide_pack",
]
