[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "pyodide-pack"
authors = [{name = "Roman Yurchak"}]
description = "A bundler for Python packages for the web"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "pyodide-cli>=0.2.0",
    "pyodide-lock",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/pyodide/pyodide-pack/"
"Bug Tracker" = "https://github.com/pyodide-pack/pyodide-pack/"
Documentation = "https://pyodide-pack.pyodide.org/"

[project.entry-points."pyodide.cli"]
pack = "pyodide_pack.cli:main"
minify = "pyodide_pack.ast_rewrite:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "hypothesis",
    "tomli-w"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
norecursedirs = [
   "node_modules",
   "examples"
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "ELLIPSIS",
]
addopts = [
  "-svra",
   "--doctest-modules",
]
testpaths = [
   "pyodide_pack",
   "examples/test_examples.py"
]

[tool.ruff]
lint.select = [
  "B904",   # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",   # bugbear (zip() without an explicit strict= parameter set.)
#  "C9",     # mccabe complexity
  "E",      # pycodestyles
  "W",      # pycodestyles
  "F",      # pyflakes
  "I",      # isort
  "PLC",    # pylint conventions
  "PLE",    # pylint errors
  "UP",     # pyupgrade
]
lint.ignore = ["E402", "E501", "E731", "E741"]
target-version = "py312"
