[metadata]
name = pyodide-pack
author = Roman Yurchak
description = A bundler for Python packages for the web
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rth/pyodide-bundler
project_urls =
    Bug Tracker = https://github.com/rth/pyodide-bundler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
install_requires =
    jinja2
    pyodide-cli>=0.2.0


[options.packages.find]
where = .

[options.entry_points]
pyodide.cli =
    pack = pyodide_pack.cli:main
